Made method and test Java 8 compatible after codeRabbit suggestion